<resources>
    <string name="app_name">Passport Module Demo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="id">ID</string>
    <string name="idtf">IDTF</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="number">Number</string>
    <string name="location">Location</string>
    <string name="export">Export</string>
    <string name="search">Search</string>
    <string name="progress">Progress</string>
    <string name="import_new">Import New</string>
    <string name="import_old">Import Old</string>
    <string name="tower_test_handler">Tower Test Handler</string>
    <string name="additionals">Additionals</string>
    <string name="towers">Towers</string>
    <string name="init_data">Init Data</string>
    <string name="wipe_data">Wipe Data</string>
    <string name="passports">Passports</string>
    <string name="search_test">Search Test</string>
    <string name="radius">Radius</string>
    <string name="listen_objects">Listen objects</string>
    <string name="update">Update</string>
    <string name="tower">Tower</string>
    <string name="type">Type</string>
    <string name="passport">Passport</string>
</resources>