<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/additional_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/id_textView"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:text="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/number_textView"
        android:layout_width="90dp"
        android:layout_height="20dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="Some"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_textView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/longitude_textView"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:layout_marginTop="20dp"
        android:text="null"
        app:layout_constraintStart_toEndOf="@+id/id_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude_textView"
        android:layout_width="120dp"
        android:layout_height="20dp"
        android:layout_marginStart="110dp"
        android:text="null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_textView"
        app:layout_constraintTop_toBottomOf="@+id/longitude_textView"
        app:layout_constraintVertical_bias="0.447" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/id"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/number"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/longitude"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toEndOf="@+id/id_textView"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="20dp"
        android:text="@string/latitude"
        android:textAllCaps="true"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_textView"
        app:layout_constraintTop_toBottomOf="@+id/textView9"
        app:layout_constraintVertical_bias="0.512" />

</androidx.constraintlayout.widget.ConstraintLayout>